# HighFPSPhysicsFix

./: CMakeLists.txt  CMakePresets.json  HighFPSPhysicsFix.ini  HighFPSPhysicsFix.vcxproj.filters  LICENSE  README.md  config.h  vcpkg.json
HighFPSPhysicsFix/: D3D11hook.cpp  D3D11hook.h  FramerateLimiter.h  HighFPSPhysicsFix.cpp  HighFPSPhysicsFix.h  HighFPSPhysicsFix.rc  HighFPSPhysicsFix.vcxproj  HighFPSPhysicsFix.vcxproj.filters  INIReader.h  JITASM.cpp  JITASM.h  PerfCounter.h  SysCall.cpp  SysCall.h  WinAPI.h  common.h  config.h  cpp.hint  dispatcher.cpp  dispatcher.h  dllmain.cpp  dllmain.h  drv_base.cpp  drv_base.h  drv_ids.h  events.cpp  events.h  exports.def  f4se.cpp  f4se.h  game.cpp  game.h  getconfig.cpp  getconfig.h  helpers.h  input.cpp  input.h  misc.cpp  misc.h  osd.cpp  (+11 more)
cmake/: headerlist.cmake  sourcelist.cmake  version.rc.in
include/: PCH.h  config.h  data.h  dispatcher.h  drv_base.h  drv_ids.h  events.h  game.h  getconfig.h  havok.h  helpers.h  misc.h  osd.h  papyrus.h  render.h  stats.h  window.h
include/Render/: FramerateLimiter.h
include/ext/: Hash.h  ICommon.h  ID3D11.h  IHook.h  IMisc.h  INIReader.h  IRandom.h  ITypes.h  Math.h  Mem.h  PW.h  PerfCounter.h  STL.h  STLCommon.h  StrHelpers.h  Threads.h  Utility.h  WinAPI.h  boost_macros.h  stl_optional.h  stl_stdio.h
scripts/: archive_artifacts.py  cmake_generate.py
src/: dispatcher.cpp  dllmain.cpp  drv_base.cpp  events.cpp  getconfig.cpp  havok.cpp  misc.cpp  osd.cpp  papyrus.cpp  render.cpp  window.cpp
src/ext/: IErrors.cpp  IHook.cpp  INIReader.cpp  ITypes.cpp  Mem.cpp  PerfCounter.cpp  StrHelpers.cpp  Threads.cpp
